# LP

./: .clang-format  CMakeLists.txt  ColoredString.cpp  ColoredString.h  Dual.cpp  Dual.h  InputLP.cpp  InputLP.h  LP.cpp  LP.h  MNumber-tmp.h  MNumber.h  Simplex.cpp  Simplex.h  main.cpp
